# EspWatch

./: clock.c  gear.c  previewPNGcfiles.py  simulator_config.json  testespflash.py  watchemu.py
.github/workflows/: check.yml
ESP32-S3-Touch-AMOLED-2.06/: esp32_deployer_config.json
ESP32-S3-Touch-AMOLED-2.06/.github/workflows/: check.yml
ESP32-S3-Touch-AMOLED-2.06/Smartwatch_OS/: CMakeLists.txt  sdkconfig.defaults
ESP32-S3-Touch-AMOLED-2.06/Smartwatch_OS/apps/my_eez_ui/: .eez-project-build  CMakeLists.txt  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui_font_test.c  ui_image_cam.c  ui_image_icon_clock.c  ui_image_icon_gear.c  ui_image_spanner.c
ESP32-S3-Touch-AMOLED-2.06/Smartwatch_OS/fonts/: arial_160.c
ESP32-S3-Touch-AMOLED-2.06/Smartwatch_OS/main/: CMakeLists.txt  battery.c  battery.h  camera_recv.c  camera_recv.h  file_explorer.c  file_explorer.h  hardware_button.c  hardware_button.h  idf_component.yml  main.c  rtc_clock.c  rtc_clock.h  ui_app.c  ui_app.h  wifi_app.c  wifi_app.h
brookesia_app_eez/: CMakeLists.txt  app_eez.cpp
esp-brookesia/: sdkconfig.defaults
esp-brookesia/components/brookesia_app_clock/: CMakeLists.txt  clock.c  idf_component.yml
esp-brookesia/components/brookesia_app_clock/include/: app_clock.hpp  app_settings.hpp
esp-brookesia/components/brookesia_app_clock/src/: app_clock.cpp  app_settings.cpp  ui_clock_icon.c  ui_settings_icon.c
esp-brookesia/components/brookesia_app_settings/: CMakeLists.txt  gear.c  idf_component.yml
esp-brookesia/main/: idf_component.yml  main.cpp
esp-brookesia/main/dark/: stylesheet.hpp
(+1 files in other folders)
